# memoirs

./: .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  install.sh  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
.venv-fresh/: pyvenv.cfg
bench_results/: RESULTS_SUMMARY.md  bench_others_v11_prf.json  bench_others_v11_prf.md  locomo_3_rk.json  locomo_full_v1.json  longmemeval_100.json  longmemeval_100.md
data/demo/: memoirs_demo.sqlite
docs/: architecture.md  benchmarks.md  chat-blueprint.md  cli.md  configuration.md  curator_bench.md  external_benchmarks_catalog.md  graph_data_libraries_catalog.md  mcp.md  memory_apps_features_part_a.md  memory_apps_features_part_b.md  missing_memory_engines.md  publishing.md
memoirs/: cli.py  config.py  export.py  models.py  setup_helpers.py  watch.py
memoirs/api/: __init__.py  server.py
memoirs/api/ui/: __init__.py
memoirs/api/ui/templates/: _forgotten.html  _links.html  _list_table.html  _provenance.html  _snap_diff.html  _why.html  graph.html  not_found.html  search.html  timeline.html
memoirs/core/: ids.py
memoirs/engine/: audit.py  graph.py  graph_retrieval.py  lifecycle_decisions.py  memory_engine.py  tool_call_extract.py
memoirs/evals/: __init__.py  longmemeval_adapter.py
memoirs/evals/suites/: __init__.py  synthetic_basic.py
memoirs/ingesters/: claude_code.py  claude_export.py
memoirs/mcp/: __init__.py  server.py  tools.py
memoirs/migrations/: 002_memory_links.py  003_fts5.py  007_sleep_runs.py  010_candidate_rejection.py  012_provenance.py  __init__.py
scripts/: audit_data_utility.py  bench_embed.py  bench_models.py  bench_models_known_cases.py  bench_pragmas.py  bench_qwen_quality.py  bench_thinking_vs_no_think.py  bench_throughput.py  bench_vs_others.py  bench_vs_others_dataset.py  coverage.sh  eval_locomo.py  install_systemd_user.sh  probe_cognee.py  quality_heuristic_vs_llm.py  seed_demo_db.py  slo_audit.py  tune_gemma_prompt.py  validate_fresh_install.sh
scripts/adapters/: __init__.py  _ollama.py  base.py  cognee_adapter.py  langmem_adapter.py  letta_adapter.py  llamaindex_adapter.py  mem0_adapter.py  memoirs_adapter.py  memori_adapter.py  zep_adapter.py
tests/: conftest.py  test_acl_wiring.py  test_api_server_coverage.py  test_api_stream.py  test_api_ui.py  test_bench_end_to_end.py  test_bench_vs_others.py  test_chain_of_memory.py  test_claude_export.py  test_cli_coverage.py  test_cognee_adapter.py  test_command_capture.py  test_conflicts.py  test_curator_chunking_summarize.py  test_curator_consolidate.py  test_curator_quality_regression.py  test_curator_robustness.py  test_data_utility_audit.py  test_db.py  test_ebbinghaus.py  test_embed_cache.py  test_embed_pool.py  test_embeddings_coverage.py  test_encryption.py  test_eval_harness.py  test_event_queue.py  test_expire_archive.py  test_extract_spacy.py  test_extractor_filters.py  test_gdpr_export.py  test_graph_coverage.py  test_graph_retrieval.py  test_hybrid_retrieval.py  test_hyde.py  test_ids.py  test_ingest_claude_code.py  test_ingester_event_hooks.py  test_lifecycle.py  test_lifecycle_coverage.py  test_mcp_server_coverage.py  (+28 more)
tests/fixtures/claude_export_sample/: conversations.json
