[project]
name = "memoirs"
version = "0.1.1"
description = "Local-first long-term memory engine for AI agents · MCP + HTTP + CLI · SQLite + sqlite-vec + FTS5"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Misael Zapata", email = "misaelzapata@gmail.com" }]
keywords = ["mcp", "memory", "llm", "agent", "rag", "sqlite", "vector-search", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/misaelzapata/memoirs"
Repository = "https://github.com/misaelzapata/memoirs"
Issues = "https://github.com/misaelzapata/memoirs/issues"
Documentation = "https://github.com/misaelzapata/memoirs#readme"

[project.optional-dependencies]
realtime = ["watchdog>=4"]
extract = ["spacy>=3.7"]
# Local LLM curator. Default backend is Qwen 3 4B (auto-detect picks
# Qwen3 → Qwen3.5 → Qwen2.5 → Phi → Gemma based on what's installed).
# Run ``memoirs setup`` to download the default GGUF (~2 GB).
curator = ["llama-cpp-python>=0.2", "huggingface-hub>=0.20"]
gemma = ["llama-cpp-python>=0.2", "huggingface-hub>=0.20"]   # legacy alias
embeddings = ["sentence-transformers>=2.7", "sqlite-vec>=0.1"]
embeddings_fast = ["fastembed>=0.4"]
reranker = ["sentence-transformers>=2.7"]
clustering = ["scikit-learn>=1.4"]
viz = ["pyvis>=0.3", "networkx>=3"]
api = ["fastapi>=0.100", "uvicorn>=0.20", "pydantic>=2", "jinja2>=3", "python-multipart>=0.0.6"]
privacy = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2"]
encryption = ["sqlcipher3-binary>=0.5"]
otel = [
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp>=1.25",
]
dev = ["pytest>=7", "httpx>=0.27", "coverage[toml]>=7", "ruff>=0.5"]
# ``[all]`` covers everything except heavy LLM deps. Use ``[full]`` for
# Qwen + cross-encoder (adds ~2 GB of weights at first run).
all = [
    "watchdog>=4",
    "spacy>=3.7",
    "sqlite-vec>=0.1",
    "fastembed>=0.4",
    "scikit-learn>=1.4",
    "pyvis>=0.3",
    "networkx>=3",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "pydantic>=2",
    "jinja2>=3",
    "python-multipart>=0.0.6",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "sqlcipher3-binary>=0.5",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp>=1.25",
]
full = [
    "memoirs[all,curator]",
    "sentence-transformers>=2.7",
]

[project.scripts]
memoirs = "memoirs.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memoirs"]

[tool.pytest.ini_options]
markers = [
    "slow: tests that load LLM weights or require >5s wall-clock; opt-in",
]

[tool.coverage.run]
source = ["memoirs"]
omit = [
    "memoirs/__main__.py",
    "memoirs/migrations/*",
    "*/tests/*",
    "memoirs/setup_helpers.py",
]
branch = true

[tool.coverage.report]
precision = 2
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 60
